Enhance Fatick.html with new location details
Updated the Fatick.html file to include additional locations and their descriptions, enhancing the content related to historical and cultural sites in the Fatick region.

--- a/Fatick.html
+++ b/Fatick.html
@@ -184,6 +184,13 @@
                 "lon": -16.63927,
                 "description": "À Djilasse, la rivière est essentielle à l’agriculture et aux pratiques spirituelles. L’eau est considérée comme ayant des propriétés purificatrices, et les traditions locales incluent des cérémonies de purification et des offrandes aux esprits qui habitent la rivière. Elle est un élément central de l'identité culturelle et spirituelle de la communauté",
                 "image": "FT6.jpg"
+            },
+			{
+                "name": "Le Marigot mystique de Simal",
+                "lat": 14.151921,
+                "lon": -16.635765,
+                "description": "Marigot utilisé à des fins mystiques",
+                "image": "FT7.jpg"
             }
 			
         ];
@@ -222,3 +229,4 @@
     </script>
 </body>
 </html>
+
