Enhance Fatick page with new content and structure
Updated the content and structure of the Fatick.html file, including additional sacred water sources and their descriptions.

--- a/Fatick.html
+++ b/Fatick.html
@@ -84,6 +84,7 @@
 				<li>Le marigot de Mbel ô boof</li>
 				<li>Le rivière de Sangomar</li>
 				<li>La rivière de Djilasse</li>
+				<li>Le Marigot mystique de Simal</li>
 								
 			</ul>	
         <div id="gallery">
@@ -229,4 +230,5 @@
     </script>
 </body>
 </html>
+
 
